# markov

./: LICENSE  LICENSE.md  README.md  pyproject.toml
markov/: __init__.py  config.py  core.py  learn.py
