[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markov"
version = "1.0.0"
description = "言語レベルでマルコフ連鎖を簡単に体験できるライブラリ。URLを指定するだけで学習・文章生成が可能。"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Atsuki.Y" }]
requires-python = ">=3.10"
keywords = ["markov", "markov-chain", "nlp", "japanese", "text-generation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Japanese",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "janome>=0.4",
    "playwright>=1.30",
]

[project.urls]
Homepage = "https://github.com/AtsukiY/markov"

[tool.setuptools.packages.find]
where = ["."]
include = ["markov*"]
